Added menu functionality and cleaned up code